integrations/salesforce/force-app/main/default/objects/DL_Request__c/DL_Request__c.object-meta.xml
<CustomObject>
    <description>A contract request sent to draftLegal from Salesforce.</description>
    <label>draftLegal Request</label>
    <nameField>
        <label>Request Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>draftLegal Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>