integrations/salesforce/force-app/main/default/objects/DL_Request__c/fields/DL_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>DL_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Text</type>
    <length>64</length>
</CustomField>