integrations/salesforce/force-app/main/default/objects/DL_Request__c/fields/DL_Generated_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>DL_Generated_Contract_Id__c</fullName>
    <description>Set when a self-serve type was generated at once.</description>
    <label>Generated Contract Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>