integrations/salesforce/force-app/main/default/objects/DL_Request__c/fields/DL_Link__c.field-meta.xml
<CustomField>
    <fullName>DL_Link__c</fullName>
    <label>Open in draftLegal</label>
    <type>Url</type>
</CustomField>