integrations/salesforce/force-app/main/default/objects/DL_Request__c/fields/DL_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>DL_Request_Id__c</fullName>
    <label>draftLegal Request Id</label>
    <type>Text</type>
    <length>40</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>